fixed image size issue for a user. I agree that 100% is way too big for most people to handle

--- a/Animation/css/bumblesmooth.css
+++ b/Animation/css/bumblesmooth.css
@@ -69,7 +69,7 @@ p {
 
 img {
     display: block;
-    max-width: 100%;
+    max-width: 60%;
 }
 
 section {
